SEBSERV-855 back-end implementation to get deletion report